# aurea-tools

./: .gitignore  LICENSE  README.md  README.pt-BR.md  pyproject.toml  requirements.txt
aurea/: __init__.py  __main__.py  cli.py  i18n.py
aurea/core/: __init__.py  arp.py  colors.py  config.py  http_client.py  license.py  log.py  network.py  platform_info.py  process.py  ui.py  validators.py
aurea/core/engines/: __init__.py  netflow.py
aurea/locales/: en_US.json  pt_BR.json
aurea/tools/: __init__.py  automation.py  bgp.py  descriptions.py  diagnostics.py  services.py
docs/: app.js  index.html  styles.css
tests/: test_colors.py  test_config.py  test_i18n.py  test_netflow.py  test_process.py  test_tools.py  test_tools_realistic.py  test_validators.py
